--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             >
               Close
             </button>
-            <button type="button" class="btn btn-primary">Download Now</button>
+            <button type="button" class="btn btn-primary">Watch Now</button>
           </div>
         </div>
       </div>
