close jadi Tutup

--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
     </div>
 
     <!-- awal modal -->
-    <!-- Modal -->
     <div
       class="modal fade"
       id="movie-detail-modal"
@@ -90,7 +89,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="movie-detail-modalLabel">
-              movie Details
+              Movie Details
             </h5>
             <button
               type="button"
@@ -106,7 +105,7 @@
               class="btn btn-secondary"
               data-bs-dismiss="modal"
             >
-              Close
+              Tutup
             </button>
             <button type="button" class="btn btn-primary">Watch Now</button>
           </div>
