ubah close jadi tutup

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
               class="btn btn-secondary"
               data-bs-dismiss="modal"
             >
-              Close
+              Tutup
             </button>
-            <button type="button" class="btn btn-primary">Download Now</button>
+            <button type="button" class="btn btn-primary">Watch Now</button>
           </div>
         </div>
       </div>
